@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,7 +40,7 @@ public abstract class PlatformFactory {
                 String factory = "com.sun.glass.ui." +  platform.toLowerCase(Locale.ROOT) + "."+ platform + "PlatformFactory";
                 // System.out.println("Loading Glass Factory " + factory);
                 Class c = Class.forName(factory);
-                instance = (PlatformFactory) c.newInstance();
+                instance = (PlatformFactory) c.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 e.printStackTrace();
                 System.out.println("Failed to load Glass factory class");
